Bug 290953 - [Regression] Dolphin 2.0 details view background lags on resize (video attached).
Summary: [Regression] Dolphin 2.0 details view background lags on resize (video attach...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-08 10:45 UTC by Nikita Skovoroda
Modified: 2012-01-17 22:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments
The video of the bug. (349.96 KB, application/ogg)
2012-01-08 10:45 UTC, Nikita Skovoroda
Details
Trivial fix. (1.34 KB, patch)
2012-01-17 02:15 UTC, Nikita Skovoroda
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Skovoroda 2012-01-08 10:45:28 UTC
Created attachment 67576 [details]
The video of the bug.

Version:           2.0 (using Devel) 
OS:                Linux

The alternate background (on even rows) lags behind when resizing the window in horizontal direction. This did not happen in old dolphin, this does not happen in kopete.

Reproducible: Always

Steps to Reproduce:
Enable details view. Resize the dolphin window in horizontal direction (fast). Observe the even rows background.

Actual Results:  
Contents are resized instantly (as fast as the window), but background lags behind.

Expected Results:  
Background should extend instantly.

See the video. Video has special colorscheme applied to make it easier to spot the lag, but the lag happens on every colorscheme and can be easily spotted on the default one.
Comment 1 Nikita Skovoroda 2012-01-08 19:33:50 UTC
Can this be fixed before 4.8.0 release (to not introduce a regression)?
It looks like a trivial bug.
Comment 2 Peter Penz 2012-01-08 21:29:32 UTC
Currently there are still quite a lot if other issues that need to be fixed first and have a higher priority. I also expect that until yet unnoticed issues will pop up after the 2.0 release - if only issues like this are left in Dolphin, I'll grep a beer and will be glad to fix it ;-) Seriously: I guess I hope I can fix this during the 4.8.x releases.
Comment 3 Nikita Skovoroda 2012-01-09 04:15:30 UTC
Ok, thank you ).
Comment 4 Nikita Skovoroda 2012-01-17 02:15:59 UTC
Created attachment 67914 [details]
Trivial fix.

This is (as it seems to me) a proper soultion to this problem

This patch extends the background area of kitemlistwidget alternate row background to the width of the parent widget, not the current kitemlistwidget width, so the background is painted propertly.

This patch works perfectly for me.
Comment 5 Nikita Skovoroda 2012-01-17 02:18:21 UTC
I hope this patch would be merged for 4.8.0, it is a rather annoying graphical glitch.
Comment 6 Peter Penz 2012-01-17 22:44:58 UTC
Git commit 468ea6c70a38511d2ed1d0f1c26ca30901e27c52 by Peter Penz.
Committed on 17/01/2012 at 21:08.
Pushed by ppenz into branch 'master'.

Do a synchronous layout for dynamic item sizes when changing the geometry

This prevents a delayed update when resizing the window e.g. in the details
view. As no animated item position changes can happen for dynamic item sizes
the synchronous relayout is fine from a performance point of view.
FIXED-IN: 4.8.0

M  +46   -39   dolphin/src/kitemviews/kitemlistview.cpp
M  +0    -3    dolphin/src/kitemviews/kitemlistview.h

http://commits.kde.org/kde-baseapps/468ea6c70a38511d2ed1d0f1c26ca30901e27c52
Comment 7 Peter Penz 2012-01-17 22:45:53 UTC
Git commit ba8908e7c019bff1d92c6ea7465cbbd18cc63883 by Peter Penz.
Committed on 17/01/2012 at 21:08.
Pushed by ppenz into branch 'KDE/4.8'.

Do a synchronous layout for dynamic item sizes when changing the geometry

This prevents a delayed update when resizing the window e.g. in the details
view. As no animated item position changes can happen for dynamic item sizes
the synchronous relayout is fine from a performance point of view.
FIXED-IN: 4.8.0

M  +46   -39   dolphin/src/kitemviews/kitemlistview.cpp
M  +0    -3    dolphin/src/kitemviews/kitemlistview.h

http://commits.kde.org/kde-baseapps/ba8908e7c019bff1d92c6ea7465cbbd18cc63883